course box alignment

--- a/style.css
+++ b/style.css
@@ -199,6 +199,7 @@ main {
 
 #course .course-container {
     max-width: 340px;
+    min-height: 340px;
     margin: 32px 16px;
     background-color: white;
 }
