--- a/mobile.css
+++ b/mobile.css
@@ -128,6 +128,7 @@
       width: 100%;
       margin: 0 0 8px 0;
       align-self: center;
+      min-height: 0;
     }
 
     #course .course-container .text-container {
