--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 }
 
 html {
-    font-family: 'Avenir Next LT Pro', sans-serif;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: 16px;
     color: #3e3e3e;
 }
@@ -199,7 +199,7 @@ main {
 
 #course .course-container {
     max-width: 340px;
-    min-height: 340px;
+    min-height: 370px;
     margin: 32px 16px;
     background-color: white;
 }
